# HAllocator

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCS_SETUP.md  DOCUMENTAION.md  Dockerfile  Doxyfile  LICENSE  QUICKREF.md  README.md  app.cpp  build.sh  includes.hpp  scripts.sh
.github/workflows/: ci.yml  docs.yml  doxygen-deploy.yml
actual-allocator/: CMakeLists.txt
actual-allocator/includes/: Block.hpp  halloc.hpp
actual-allocator/src/: halloc.ipp
basic-allocator/: CMakeLists.txt  basic_alloc.cpp  basic_alloc.hpp  hh_basic_alloc.cpp  hh_basic_alloc.hpp
halloc/: CMakeLists.txt  includes.hpp
halloc/includes/: Block.hpp  BlocksContainer.hpp  Halloc.hpp  RBTreeDriver.hpp
halloc/src/: Block.cpp  Block.ipp  BlocksContainer.ipp  Halloc.ipp
includes/: hh_alloc.hpp
rb-tree/: CMakeLists.txt  rb-tree.hpp  rb-tree.ipp
scripts/: pre-commit.sh
smart-allocator/: CMakeLists.txt
tests/: CMakeLists.txt  test_basic_alloc.cpp  test_halloc.BlocksContainer.cpp  test_halloc_Block.cpp  test_halloc_BlocksContainer.cpp  test_halloc_Halloc.cpp  test_rb_tree.cpp
